--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,7 @@
     <dimen name="spacing_normal">16dp</dimen>
     <dimen name="spacing_small">8dp</dimen>
     <dimen name="spacing_tiny">4dp</dimen>
+
+    <dimen name="chart_bubble_size">40dp</dimen>
+    <dimen name="chart_bubble_text_size">12dp</dimen>
 </resources>
